@@ -1,3 +1,12 @@
+2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b4
+
+ * Fix: Line-ending in bars014 skin
+
+ * Change: Some code style.
+
+ * Change: Removed code in config.php that was made for
+           PHP 4.0RC1 and earlier.
+
 2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b3
 
  * Change: Unified layout of all admin/tools pages.
@@ -7,6 +16,8 @@
  * Fix: URL to stats from stats-wizard did not work correct embedded.
 
  * Fix: Stats from stats-wizard did not work at all in IE6 !!!
+
+   Thanks to Andrew Vasilyev
 
 2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b2
 
